# adrastos

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  biome.json  docker-compose.yml  example.env  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/deploy/: Dockerfile.app  Dockerfile.emails  cliff.toml
.github/workflows/: cd.yaml  ci-rust.yaml  ci-typescript.yaml  docker.yaml
crates/app/: Cargo.toml  Dockerfile
crates/app/src/: assets.rs  cli.rs  main.rs  openapi.rs  session.rs  state.rs  telemetry.rs  util.rs
crates/app/src/cli/: mod.rs
crates/app/src/cli/commands/: mod.rs
crates/app/src/handlers/: config.rs  mod.rs  storage.rs
crates/app/src/handlers/auth/: mfa.rs  mod.rs  oauth2.rs  passkeys.rs  token.rs
crates/app/src/handlers/tables/: custom.rs  mod.rs
crates/app/src/handlers/teams/: mod.rs  projects.rs
crates/app/src/middleware/: config.rs  content_length_limiter.rs  cors.rs  database.rs  extractors.rs  mod.rs  project.rs  size_limiter.rs  trace.rs  user.rs
crates/core/: Cargo.toml  a.rs
crates/core/src/: config.rs  db.rs  entities.rs  error.rs  expiring_map.rs  id.rs  lib.rs  main.rs  openapi.rs  s3.rs  task_queue.rs  url.rs  util.rs
crates/core/src/auth/: mfa.rs  mod.rs  oauth2.rs  passkeys.rs
crates/core/src/auth/oauth2/: mod.rs  providers.rs
crates/core/src/db/: postgres.rs  redis.rs
crates/core/src/entities/: any_user.rs  connection.rs  custom.rs  custom_table.rs  migrations.rs  mod.rs  passkey.rs  project.rs  refresh_token_tree.rs  system.rs  system_user.rs  team.rs  upload.rs  upload_meta.rs  user.rs
crates/core/src/entities/custom_table/: fields.rs  mm_relation.rs  mod.rs  permissions.rs  schema.rs
crates/core/src/handlers/: mod.rs
crates/core/src/handlers/auth/: mod.rs  oauth2.rs  token.rs
crates/core/src/handlers/tables/: custom.rs  mod.rs
crates/core/src/migrations/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: attribute_parser.rs  attributes.rs  db_common.rs  db_identity.rs  db_query.rs  db_schema.rs  db_select.rs  db_serialize.rs  lib.rs  types.rs
crates/macros/src/derive/: db_common.rs  db_query.rs  db_select.rs  mod.rs
crates/macros/tests/: derive.rs  mod.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: commands.rs  main.rs
dashboard/: .eslintrc  .prettierrc  next.config.mjs  package.json  tsconfig.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dash/: layout.tsx
dashboard/src/components/: dashboard-navbar.tsx  index.ts
dashboard/src/components/ui/: avatar.tsx  button.tsx  index.ts  input.tsx  navigation-menu.tsx
dashboard/src/lib/: constants.ts
data/nginx/: app.conf  nginx.conf
data/nginx/conf.d/: adrastos-api-pr.xenfo.dev.conf  adrastos-api.xenfo.dev.conf  adrastos-pr.xenfo.dev.conf  api.adrastos.xenfo.dev.conf  main.conf
data/nginx/nginxconfig.io/: proxy.conf
data/nginx/production/conf.d/: adrastos-api.xenfo.dev.conf
data/nginx/production/nginxconfig.io/: general.conf  security.conf
data/nginx/sites-available/: api.adrastos.xenfo.dev.conf
data/nginx/staging/: nginx.conf
data/nginx/staging/nginxconfig.io/: proxy.conf
data/staging/nginxconfig.io/: general.conf  proxy.conf
nginx/: acme-challenge.conf  nginx.conf
nginx/conf.d/: app.conf
patches/: @icons-pack__react-simple-icons@9.4.0.patch  @tanstack__react-query@5.28.9.patch  @tanstack__react-router@1.34.3.patch
scripts/: build.sh  create-staging.sh  destroy-staging.sh  push.sh  staging.sh
user_conf.d/: api.adrastos.xenfo.dev.conf  example.conf
