[package]
name = "adrastos"
version = "0.1.0"
description = "A killer Backend-as-a-Service (BaaS) written in Rust"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-web = { version = "4.4.0", features = ["rustls", "cookies"] }
actix-web-httpauth = "0.8.1"
adrastos_core = { path = "../core" }
argon2 = "0.5.2"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
deadpool-postgres = "0.10.5"
deadpool-redis = "0.12.0"
dotenvy = "0.15.7"
futures-util = "0.3.29"
heck = "0.4.1"
json-patch = "1.2.0"
jsonwebtoken = "8.3.0"
lettre = { version = "0.10.4", default-features = false, features = [
	"tokio1-rustls-tls",
	"smtp-transport",
	"pool",
	"hostname",
	"builder",
] }
mailchecker = "5.0.9"
oauth2 = "4.4.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
rustls = "0.20"
rustls-pemfile = "1.0.4"
sea-query = { version = "0.30.2", features = [
	"attr",
	"with-chrono",
	"postgres-array",
	"thread-safe",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
sentry = "0.31.8"
sentry-actix = "0.31.8"
sentry-tracing = "0.31.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-axiom = "0.4.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-unwrap = "0.10.0"
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
validator = { version = "0.16.1", features = ["derive"] }
