[package]
name = "adrastos"
version = "0.1.0"
description = "A killer Backend-as-a-Service (BaaS) written in Rust"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-web = { version = "4.5.1", features = ["rustls", "cookies"] }
actix-web-httpauth = "0.8.1"
adrastos_core = { path = "../core" }
argon2 = "0.5.3"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
deadpool-postgres = "0.10.5"
deadpool-redis = "0.12.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
heck = "0.4.1"
json-patch = "1.2.0"
jsonwebtoken = "8.3.0"
lettre = { version = "0.10.4", default-features = false, features = [
	"tokio1-rustls-tls",
	"smtp-transport",
	"pool",
	"hostname",
	"builder",
] }
mailchecker = "5.0.9"
mime_guess = "2.0.4"
oauth2 = "4.4.2"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
rust-embed = { version = "8.2.0", features = ["actix", "compression"] }
rustls = "0.20"
rustls-pemfile = "1.0.4"
sea-query = { version = "0.30.7", features = [
	"attr",
	"with-chrono",
	"postgres-array",
	"thread-safe",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
sentry = "0.31.8"
sentry-actix = "0.31.8"
sentry-tracing = "0.31.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-axiom = "0.4.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-unwrap = "0.10.0"
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
validator = { version = "0.16.1", features = ["derive"] }
webauthn-rs = { git = "https://github.com/Xenfo/webauthn-rs", rev = "fbe5b35", features = [
	"danger-allow-state-serialisation",
] }
