[package]
name = "adrastos"
version = "0.1.0"
description = "A killer Backend-as-a-Service (BaaS) written in Rust"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
adrastos_core = { path = "../core" }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum_typed_multipart = "0.11.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
deadpool-postgres = "0.13.2"
dotenvy = "0.15.7"
fred = "9.0.3"
heck = "0.5.0"
json-patch = "2.0.0"
jsonptr = "0.4.7"
lettre = { version = "0.11.7", default-features = false, features = [
	"tokio1-rustls-tls",
	"smtp-transport",
	"pool",
	"hostname",
	"builder",
] }
mailchecker = "6.0.4"
oauth2 = "4.4.2"
regex = "1.10.4"
rust-embed = { version = "8.4.0", features = [
	"axum",
	"compression",
	"mime-guess",
] }
rustls = { version = "0.23.7", features = ["ring"] }
sea-query = { version = "0.30.7", features = [
	"attr",
	"with-chrono",
	"postgres-array",
	"thread-safe",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
sentry = "0.32.3"
sentry-tower = "0.32.3"
sentry-tracing = "0.32.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["macros"] }
tokio-util = "0.7.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
	"cors",
	"normalize-path",
	"request-id",
	"trace",
	"util",
] }
tower-sessions = { version = "0.12.2", default-features = false, features = [
	"axum-core",
	"signed",
] }
tower-sessions-redis-store = { git = "https://github.com/maxcountryman/tower-sessions-stores", branch = "dependabot/cargo/fred-9.0.1" }
tracing = "0.1.40"
tracing-axiom = "0.6.1"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
validator = { version = "0.18.1", features = ["derive"] }
webauthn-rs = { git = "https://github.com/Xenfo/webauthn-rs", rev = "cad800c", features = [
	"danger-allow-state-serialisation",
	"danger-no-uuid",
] }
