[package]
name = "adrastos_core"
version = "0.1.0"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = ["cookies"] }
adrastos_macros = { path = "../macros" }
argon2 = "0.5.3"
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.21.0"
chrono = "0.4.37"
deadpool-postgres = "0.10.5"
deadpool-redis = "0.12.0"
fancy-regex = "0.11.0"
heck = "0.4.1"
json-patch = "1.2.0"
jsonwebtoken = "8.3.0"
nanoid = "0.4.0"
oauth2 = "4.4.2"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.11.27", features = ["json"] }
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
sea-query = { version = "0.30.7", features = [
	"attr",
	"with-chrono",
	"postgres-array",
	"thread-safe",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros"] }
tokio-postgres = { version = "0.7.10", features = [
	"with-chrono-0_4",
	"with-serde_json-1",
] }
tokio-postgres-rustls = "0.10.0"
totp-rs = { version = "5.5.1", features = ["gen_secret", "qr"] }
tracing = "0.1.40"
tracing-unwrap = "0.10.0"
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
validator = { version = "0.16.1", features = ["derive"] }
webauthn-rs = { git = "https://github.com/Xenfo/webauthn-rs", rev = "fbe5b35", features = [
	"danger-allow-state-serialisation",
] }
